cmake_minimum_required(VERSION 3.14)
project(ProcessamentoGrafico)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)


add_subdirectory(Exercicios/Modulo2)
add_subdirectory(Exercicios/Modulo3)
add_subdirectory(Exercicios/Modulo4)
add_subdirectory(Exercicios/Modulo5)
add_subdirectory(Exercicios/modulo_4_vivencial)